# comandr

./: Cargo.toml  README.md  build.rs  flake.nix  mize_module.nix
docs/: idea.md
src/: lib.rs
src/core/: comandr.rs  command.rs  error.rs  module.rs
src/platform/qt/: mod.rs
src/platform/web/: mod.rs
src/ui/react/: package-lock.json  package.json  vite.config.js
src/ui/react/src/: main.jsx
src/ui/react/src/components/ui/: command.jsx  dialog.jsx
src/ui/slint/: main.slint
