[package]
name = "comandr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
qt = [ "qt_core", "qt_gui", "qt_widgets", "slint" ]

[dependencies]
qt_core = { version = "0.5.0", optional = true }
qt_gui = { version = "0.5.0", optional = true }
qt_widgets = { version = "0.5.0", optional = true }
slint = { version = "1.7.1", optional = true }

[build-dependencies]
slint-build = "1.7.1"
