[package]
name = "comandr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
qt = [ "qt_core", "qt_gui", "qt_widgets", "slint" ]
wasm-target = [ "wasm-bindgen", "web-sys" ]

[dependencies]
colored = "2.1.0"
qt_core = { version = "0.5.0", optional = true }
qt_gui = { version = "0.5.0", optional = true }
qt_widgets = { version = "0.5.0", optional = true }
simsearch = "0.2.5"
slint = { version = "1.7.1", optional = true }
tracing = "0.1.40"

# wasm dependencies
wasm-bindgen = { version = "0.2.93", optional =  true }
web-sys = { version = "0.3.70", features = [ "console", "EventTarget", "Window" ], optional = true }

[build-dependencies]
slint-build = "1.7.1"
